RESOLVED FIXED145494
[iOS] Tiling coverage sometimes inflated by outdated scale factor.
https://bugs.webkit.org/show_bug.cgi?id=145494
Summary [iOS] Tiling coverage sometimes inflated by outdated scale factor.
Andreas Kling
Reported 2015-05-30 18:16:59 PDT
Attachments
Patch idea (6.53 KB, patch)
2015-05-30 18:19 PDT, Andreas Kling
benjamin: review+
Patch for landing (6.35 KB, patch)
2015-05-30 18:37 PDT, Andreas Kling
no flags
Andreas Kling
Comment 1 2015-05-30 18:19:31 PDT
Created attachment 253968 [details] Patch idea
WebKit Commit Bot
Comment 2 2015-05-30 18:21:01 PDT
Attachment 253968 [details] did not pass style-queue: ERROR: Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:49: Bad include order. Mixing system and custom headers. [build/include_order] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Benjamin Poulain
Comment 3 2015-05-30 18:24:44 PDT
Comment on attachment 253968 [details] Patch idea View in context: https://bugs.webkit.org/attachment.cgi?id=253968&action=review Good to finally nuke the tile allocation bug :) > Source/WebCore/platform/graphics/ca/TileController.cpp:316 > +FloatRect TileController::computeTileCoverageRect(const FloatSize& newSize, const FloatRect& previousVisibleRect, const FloatRect& visibleRect, float contentsScale) const Shouldn't this be a double?
Andreas Kling
Comment 4 2015-05-30 18:37:32 PDT
Created attachment 253969 [details] Patch for landing
WebKit Commit Bot
Comment 5 2015-05-30 19:26:17 PDT
Comment on attachment 253969 [details] Patch for landing Clearing flags on attachment: 253969 Committed r185036: <http://trac.webkit.org/changeset/185036>
WebKit Commit Bot
Comment 6 2015-05-30 19:26:22 PDT
All reviewed patches have been landed. Closing bug.
Simon Fraser (smfr)
Comment 7 2015-05-31 00:05:23 PDT
Nice fix!
Note You need to log in before you can comment on or make changes to this bug.